Preliminary research done
THAT WAS A LOT

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -11,12 +11,36 @@
 	howpublished = "\url{http://www.e-perimetron.org/Vol_2_2/Wolodchenko_Forner.pdf}"
 }
 
+@MISC{earth-explored,
+	author = {Tom Head, Mysterious Universe},
+	title = {Earth is Still an Alien Planet: 5 Habitats We Haven’t Explored},
+	month = sept,
+	year = {2014},
+	howpublished = "\url{http://mysteriousuniverse.org/2014/09/earth-is-still-an-alien-planet-5-habitats-we-havent-explored/}"
+}
+
 @MISC{oceandepth,
 	author ={National Ocean Service},
 	title = {How much of the ocean have we explored?},
 	month = jun,
 	year = {2014},
 	howpublished = "\url{http://oceanservice.noaa.gov/facts/exploration.html}"
+}
+
+@MISC{earth-mapped,
+	author= {Lizzy Daw, BBC FOCUS - Science and Technology},
+	title = {Has all of the Earth been mapped?},
+	month = jul,
+	year = {2009},
+	howpublished = "\url{http://www.sciencefocus.com/qa/has-all-earth-been-mapped}"
+}
+
+@MISC{curiosity,
+	author = {NASA},
+	title = {Curiosity Has Landed},
+	month = aug,
+	year = {2012},
+	howpublished = "\url{http://www.jpl.nasa.gov/video/details.php?id=1103}"
 }
 
 @MISC{firstflyby,
@@ -82,6 +106,14 @@
 	howpublished = "\url{http://oceanexplorer.noaa.gov/backmatter/whatisexploration.html}"
 }
 
+@MISC{bottom-composition,
+	author = { Rich Galiano, New Yersey Scuba Diving},
+	title ={Bottom Composition},
+	month = may,
+	year = {2015},
+	howpublished = "\url{http://njscuba.net/biology/misc_bottom.php}"
+}
+
 @MISC{whyweexplo,
 	author = {NASA},
 	title = {Why We Explore},
@@ -107,6 +139,20 @@
 
 %-----------------------------------------------------------
 %theory
+
+@BOOK{snell,
+	author = "Wolf, K. B.",
+	title = "Geometry and dynamics in refracting systems",
+	year = "1995",
+	publisher = "European Journal of Physics 16: 14–20"
+}
+
+@MISC{reflectivity,
+	title = {Reflectivity},
+	month = feb,
+	year = {2015},
+	howpublished = "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000554104-reflectivity}
+}
 
 @MISC{autonomousbasic,
 	author = {RobotWorx},
