--- a/report/citations.bib
+++ b/report/citations.bib
@@ -345,6 +345,11 @@
 	howpublished = "\url{http://www2.forsvaret.dk/viden-om/indland/ammunitionsrydning/Pages/Ammunitionsrydning2.aspx}"
 }
 
+@MISC{aaues,
+	title = {About the Department of Electronics, AAU},
+	howpublished= "\url{http://www.es.aau.dk}
+}
+
 @MISC{Police,
 	title = {About the Police - The National Police},
 	month = aug,
@@ -356,6 +361,27 @@
 	title = {Forsvaret For Danmark - Aim and Tasks},
 	howpublished = "\url{http://forsvaret.dk/FKO/ENG/FACTS%20AND%20FIGURES/AIM%20AND%20TASKS/Pages/default.aspx}"
 }
+
+%-------------------------------------------------------
+%health & safety
+
+@MISC{laserclass,
+	title = {Laser-Safety},
+	month = feb,
+	year = {2015},
+	howpublished = "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000548623-laser-safety}
+}
+
+@MISC{laserrohs,
+	title = {LIDAR Lite Product Details},
+	howpublished = "\url{https://www.sparkfun.com/products/13167}
+}
+
+@MISC{laserclass2,
+	title = {Laser Classification - University of Warwick},
+	month = sept,
+	year = {2011},
+	howpublished = "\url{http://www2.warwick.ac.uk/services/healthsafetywellbeing/guidance/lasers/appendix1classification/}
 
 %-------------------------------------------------------
 %development
