--- a/report/sections/ch2-health-safety-analysis.tex
+++ b/report/sections/ch2-health-safety-analysis.tex
@@ -1,11 +1,10 @@
 \clearpage
 \section{Health and Safety analysis}
 
-In the following section we analyse and review the classification of the laser product of choice, the LIDAR-Lite rangefinder laser. This laser product emits laser radiation and it is designated as a Class 1 laser product during all procedures of operation. This means that the laser is safe to look at with the unaided eye, however, it is very advisable to avoid looking into the beam and power the module off when not in use.
-%TODO: ref{http://kb.pulsedlight3d.com/support/solutions/articles/5000548623-laser-safety}
+In the following section we analyse and review the classification of the laser product of choice, the LIDAR-Lite rangefinder laser. 
 
-The operation of LIDAR-Lite without a housing and optics or modification of the housing or optics that exposes the laser source may result in direct exposure to laser radiation and the risk of permanent eye damage. Removal or modification of the diffuser in front of the laser optic may result in the risk of permanent eye damage and the declassification of the laser. The product is also RoHS compliant.
-%TODO: ref{https://www.sparkfun.com/products/13167}
+This product emits laser radiation and it is classified as a \textit{Class 1 laser product} during all procedures of operation. This means that the laser is safe to look at with the unaided eye, however, it is very advisable to avoid looking into the beam and power the module off when not in use\cite{laserclass}.
 
-A Class 1 laser is safe under all conditions of normal use. This means the maximum permissible exposure (MPE) cannot be exceeded when viewing a laser with the naked eye or with the aid of typical magnifying optics (e.g. telescope or microscope). To verify compliance, the standard specifies the aperture and distance corresponding to the naked eye, a typical telescope viewing a collimated beam, and a typical microscope viewing a divergent beam. It is important to realize that certain lasers classified as Class 1 may still pose a hazard when viewed with a telescope or microscope of sufficiently large aperture. For example, a high-power laser with a very large collimated beam or very highly divergent beam may be classified as Class 1 if the power that passes through the apertures defined in the standard is less than the AEL for Class 1; however, an unsafe power level may be collected by a magnifying optic with larger aperture.
-%TODO: ref{http://en.wikipedia.org/wiki/Laser_safety#Class_1}
+The operation of LIDAR-Lite, without proper housing and optics, or modification of the housing or optics that exposes the laser source may result in direct exposure to laser radiation and the risk of permanent eye damage. Removal or modification of the diffuser in front of the laser optic may result in the risk of permanent eye damage and the declassification of the laser as a \textit{Class 1 laser product}. The product is also RoHS compliant\cite{laserrohs}.
+
+A \textit{Class 1 laser product} is safe under all conditions of normal use. This means the maximum permissible exposure (MPE) cannot be exceeded when viewing a laser with the naked eye or with the aid of typical magnifying optics (e.g. telescope or microscope). To verify compliance, the standard specifies the aperture and distance corresponding to the naked eye, a typical telescope viewing a collimated beam, and a typical microscope viewing a divergent beam. It is important to realize that certain lasers classified as Class 1 may still pose a hazard when viewed with a telescope or microscope of sufficiently large aperture. For example, a high-power laser with a very large collimated beam or very highly divergent beam may be classified as Class 1 if the power that passes through the apertures defined in the standard is less than the accessible emission limits for Class 1; however, an unsafe power level may be collected by a magnifying optic with larger aperture\cite{laserclass2}.
