--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -12,8 +12,8 @@ This section outlines the requirements for both the prototype that we are aiming
 	\item Running a Raspberry Pi that controls mapping and navigation asynchronously.
 	\item The program should be written in Python.
 	\item The system should include a laser sensor.
-	\item The system should include an optical flow sensor.
- 	\item The prototype should be capable of implementing an 3D mapping sensor without much change. %TODO: Too broad in my opinion. 
+	\item The system should include ultrasonic sensors.
+ 	\item The prototype should be capable of implementing a 3D mapping sensor without too much change.
 	
 \end{enumerate}
 
@@ -27,4 +27,4 @@ This section outlines the requirements for both the prototype that we are aiming
 	
 \end{enumerate}
 
-These criteria will be used to design, build, and test our implementation of the prototype. These requirements will be re-evaluated in the \textit{Discussion} section.
+These criteria will be used to design, build, and test our implementation of the prototype. These requirements will be re-evaluated in the \textit{Testing} section, Chapter \ref{ch:testing}.
